--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,16 @@
 </head>
 <body>
 
+<%= flash[:errors].join('<br>').html_safe if flash[:errors] %>
+
+<% if signed_in? %>
+  <%= current_user.email %>
+  <%= button_to 'Sign Out', session_url, method: :delete %>
+<% else %>
+  <%= link_to 'Sign In', new_session_url %>
+	<%= link_to 'Sign Up', new_user_url %>
+<% end %>
+
 <%= yield %>
 
 </body>
