--- a/app/views/friend_circles/new.html.erb
+++ b/app/views/friend_circles/new.html.erb
@@ -1,3 +1,4 @@
 <h1>New Friend Circle</h1>
 
-<%= render partial: 'form', locals: { friend_circle: @friend_circle } %>
+<%= render partial: 'form',
+           locals: { friend_circle: @friend_circle, users: @users } %>
