--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,4 @@
 <h1>Posts#new</h1>
 <p>Find me in app/views/posts/new.html.erb</p>
+
+<%= render partial: 'form', locals: { friend_circles: @friend_circles, post: @post } %>
