--- a/app/views/friend_circles/_form.html.erb
+++ b/app/views/friend_circles/_form.html.erb
@@ -1,10 +1,21 @@
+<% method = friend_circle.persisted? ? 'patch' : 'post' %>
+
 <%= form_for( friend_circle ) do |f| %>
+	<input type="hidden" name="_method" value="<%= method %>">
+	<input type="hidden" name="friend_circle[member_ids][]" value="">
   <%= f.label :name %><br>
 	<%= f.text_field :name %><br><br>
 	<%= f.label 'Users' %><br>
-	<%= collection_check_boxes :friend_circle, :member_ids,
-							               users, :id, :email %><br><br>
 
+	<label for="friend_circle_member">Users</label>
+	<% users.each do |user| %>
+		<input
+			type="checkbox"
+			name="friend_circle[member_ids][]"
+			value="<%= user.id %>"
+			<%= ' checked' if friend_circle.member_ids.include?(user.id) %>>
+			<%= user.email %>
+	<% end %>
 
-	<%= f.submit 'Create Friend Circle' %>
+	<%= f.submit 'Update Friend Circle' %>
 <% end %>
