--- a/app/views/friend_circles/edit.html.erb
+++ b/app/views/friend_circles/edit.html.erb
@@ -1,3 +1,3 @@
 <h1>Edit Friend Circle</h1>
 
-<%= render partial: 'form', locals: { friend_circle: @friend_circle } %>
+<%= render partial: 'form', locals: { friend_circle: @friend_circle, users: @users } %>
