--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<h1>Feed</h1>
+
+<% if @posts.empty? %>
+	No posts
+<% else %>
+	<%= render @posts %>
+<% end %>
