additional bootstrap cleanup

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,8 +1,14 @@
 <%= nav_bar :fixed => :top, :brand => "App Academy+" do %>
     <%= menu_group do %>
         <%= menu_item "Home", root_path %>
-        <% if current_user %>
-            <%= menu_item "Log Out", session_url, method: :delete %>
+    <% end %>
+    <%= menu_group pull: :right do %>
+        <% if signed_in? %>
+          <%= menu_item 'Sign Out', session_url, method: :delete %>
+          <%= menu_item current_user.email  %>
+        <% else %>
+            <%= menu_item 'Sign In', new_session_url %>
+            <%= menu_item 'Sign Up', new_user_url %>
         <% end %>
     <% end %>
 <% end %>
