--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,6 +1,5 @@
 @import "twitter/bootstrap/bootstrap";
-body { padding-top: 60px;
-				padding-left: 20px; }
+body { padding-top: 60px;}
 @import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
